# irongagte

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  SPEC.md  docker-compose.yml
.github/workflows/: ci.yml
admin-ui/: index.html  package-lock.json  package.json  vite.config.ts
admin-ui/src/: App.tsx  auth.ts  router.tsx
admin-ui/src/api/: applications.ts  claims.ts  client.ts  groups.ts  idp.ts  operatorPermissions.ts  operatorRoles.ts  operators.ts  roles.ts  tenants.ts  users.ts
admin-ui/src/components/: ConfirmDialog.tsx  Layout.tsx  Logo.tsx
admin-ui/src/components/ui/: button.tsx
admin-ui/src/context/: tenant.tsx
admin-ui/src/pages/: Callback.tsx  Login.tsx
admin-ui/src/pages/applications/: AppForm.tsx  AppList.tsx
admin-ui/src/pages/claims/: ClaimDefForm.tsx  ClaimDefList.tsx
admin-ui/src/pages/groups/: GroupDetail.tsx  GroupList.tsx
admin-ui/src/pages/idp/: IdpForm.tsx  IdpList.tsx
admin-ui/src/pages/operator-permissions/: OperatorPermissionList.tsx
admin-ui/src/pages/operator-roles/: OperatorRoleDetail.tsx  OperatorRoleForm.tsx  OperatorRoleList.tsx  PermissionSelector.tsx
admin-ui/src/pages/operators/: OperatorDetail.tsx  OperatorList.tsx
admin-ui/src/pages/roles/: RoleDetail.tsx  RoleList.tsx
admin-ui/src/pages/tenants/: TenantDetail.tsx  TenantList.tsx
admin-ui/src/pages/users/: UserDetail.tsx  UserList.tsx
config/: default.yaml
crates/api/: Cargo.toml
crates/api/src/: audit.rs  authz_op.rs  claims.rs  config.rs  error.rs  lib.rs  main.rs  router.rs  signing_key.rs  state.rs
crates/api/src/cmd/: admin_init.rs  key_rotate.rs  mod.rs
crates/api/src/handlers/: admin_applications.rs  admin_audit.rs  admin_auth.rs  admin_claims.rs  admin_groups.rs  admin_idp.rs  admin_operator_permissions.rs  admin_operator_roles.rs  admin_operators.rs  admin_permissions.rs  admin_roles.rs  admin_sessions.rs  admin_tenants.rs  admin_users.rs  authorize.rs  metrics.rs  mod.rs  oidc.rs  operator.rs  tenants.rs  token.rs  users.rs
crates/api/static/admin/: index.html
crates/api/static/admin/assets/: index-1V9PQjvp.css  index-B-bqD9nM.js  index-C_PQX9fw.js  index-DftthngU.css
crates/api/tests/: api_tests.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  magic_link.rs  password.rs  session.rs  totp.rs
crates/auth/tests/: password_tests.rs  session_tests.rs
crates/authz/: Cargo.toml
crates/authz/src/: engine.rs  lib.rs  policy.rs  scope.rs
crates/authz/tests/: engine_tests.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  providers.rs  repositories.rs  types.rs
crates/core/src/tests/: errors_tests.rs  mod.rs  types_tests.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: hash.rs  jwks.rs  jwt.rs  keys.rs  lib.rs  pkce.rs  token.rs  totp.rs
crates/federation/: Cargo.toml
crates/federation/src/: ldap.rs  lib.rs  oauth2.rs  oidc.rs  service.rs
crates/federation/tests/: service_tests.rs
crates/scim/: Cargo.toml
crates/scim/src/: error.rs  filter.rs  groups.rs  lib.rs  router.rs  types.rs  users.rs
crates/scim/tests/: scim_tests.rs
crates/store/: Cargo.toml
crates/store/src/: config.rs  lib.rs  util.rs
crates/store/src/pg/: application.rs  audit.rs  claim_def.rs  group.rs  group_claim.rs  identity.rs  idp_config.rs  magic_link.rs  mod.rs  operator.rs  operator_permission.rs  operator_role.rs  passkey.rs  permission.rs  refresh_token.rs  role.rs  signing_key.rs  tenant.rs  user.rs  user_claim.rs  user_credentials.rs
crates/store/src/session/: mod.rs
crates/store/src/sqlite/: application.rs  audit.rs  group.rs  identity.rs  idp_config.rs  magic_link.rs  mod.rs  passkey.rs  permission.rs  refresh_token.rs  role.rs  tenant.rs  user.rs  user_credentials.rs
crates/store/tests/: sqlite_repos.rs
crates/webauthn/: Cargo.toml
crates/webauthn/src/: lib.rs  service.rs
crates/webauthn/tests/: service_tests.rs
docs/: README.md  admin-api.md  admin-ui.md  architecture.md  claims-model.md  development.md  migrations.md  multi-tenancy.md  oauth-oidc.md  operator-rbac.md
migrations/postgres/: 0001_create_operators.sql  0002_create_operator_credentials.sql  0003_create_identities.sql  0003_create_tenants.sql  0004_create_applications.sql  0004_create_users.sql  0005_create_refresh_tokens.sql  0005_create_user_credentials.sql  0006_create_roles_permissions.sql  0007_create_applications.sql  0008_create_audit_events.sql  0008_create_refresh_tokens.sql  0009_create_roles.sql  0009_create_user_credentials.sql  0010_create_magic_links.sql  0010_create_user_roles.sql  0011_create_idp_configs.sql  0011_create_passkeys.sql  0012_create_groups.sql  0012_create_magic_links.sql  0013_create_passkeys.sql  0014_create_groups.sql  0015_create_group_members.sql  0016_create_audit_events.sql  0017_create_operator_permissions.sql  0018_create_operator_roles.sql  0019_create_operator_role_permissions.sql  0020_create_operator_role_assignments.sql  0021_add_users_attributes.sql  0022_add_operator_roles_tenant_id.sql  0023_add_applications_claim_prefix.sql  0024_create_claim_definitions.sql  0025_create_group_claims.sql  0026_create_user_claims.sql  0027_add_groups_priority.sql  0028_drop_roles.sql  0029_audit_events_tenant_nullable.sql  0030_create_signing_keys.sql
migrations/sqlite/: 0001_create_tenants.sql  0002_create_users.sql  0003_create_identities.sql  0004_create_applications.sql  0005_create_refresh_tokens.sql  0006_create_roles_permissions.sql  0007_create_idp_configs.sql  0008_create_audit_events.sql  0009_create_user_credentials.sql  0010_create_magic_links.sql  0011_create_passkeys.sql  0012_create_groups.sql
