[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/crypto",
    "crates/store",
    "crates/auth",
    "crates/webauthn",
    "crates/federation",
    "crates/authz",
    "crates/scim",
    "crates/api",
]

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
# Web
axum             = "0.8"
tower            = "0.5"
tower-http       = { version = "0.6", features = ["trace", "cors", "request-id", "fs"] }
tokio            = { version = "1", features = ["full"] }

# Database
sqlx             = { version = "0.8", features = ["postgres", "uuid", "time", "runtime-tokio"] }

# Cache
fred             = "10"

# Crypto / JWT
jsonwebtoken     = { version = "10.3.0", features = ["use_pem", "rust_crypto"] }
argon2           = "0.5"
password-hash    = "0.6.1"
sha2             = "0.11.0"
rand             = "0.10.1"
rand_core        = { version = "0.6", features = ["getrandom"] }
base64ct         = { version = "1", features = ["alloc"] }
p256             = "0.13"
rsa              = "0.9"


# MFA
totp-rs          = { version = "5", features = ["gen_secret", "otpauth"] }
webauthn-rs      = "0.5"

# Federation
reqwest          = { version = "0.12", features = ["json"] }
ldap3            = "0.11"

# Email
lettre           = "0.11"

# Serialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
uuid             = { version = "1", features = ["v4", "serde"] }
time             = { version = "0.3", features = ["serde"] }
url              = { version = "2", features = ["serde"] }

# Config
config           = "0.15"

# CLI
clap             = { version = "4", features = ["derive"] }

# Error handling
thiserror        = "2"
anyhow           = "1"

# Async traits
async-trait      = "0.1"

# Observability
tracing                     = "0.1"
tracing-subscriber          = { version = "0.3", features = ["env-filter", "json"] }
metrics                     = "0.24"
metrics-exporter-prometheus = "0.16"

# Dev / test
mockall     = "0.13"
fake        = "4"
