[package]
name = "irongate-api"
version = "0.1.0"
edition = "2021"

[dependencies]
irongate-core       = { path = "../core" }
irongate-crypto     = { path = "../crypto" }
irongate-store      = { path = "../store" }
irongate-auth       = { path = "../auth" }
irongate-webauthn   = { path = "../webauthn" }
irongate-federation = { path = "../federation" }
irongate-authz      = { path = "../authz" }
irongate-scim       = { path = "../scim" }
anyhow              = { workspace = true }
async-trait         = { workspace = true }
axum                = { workspace = true }
config              = { workspace = true }
fred                = { workspace = true }
metrics             = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
sqlx                = { workspace = true }
thiserror           = { workspace = true }
time                = { workspace = true }
tokio               = { workspace = true }
tower               = { workspace = true }
tower-http          = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
uuid                = { workspace = true }

[[bin]]
name = "irongate"
path = "src/main.rs"
