[package]
name = "irongate-authz"
version = "0.1.0"
edition = "2021"

[dependencies]
irongate-core  = { path = "../core" }
irongate-store = { path = "../store" }
async-trait    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
uuid           = { workspace = true }
