[package]
name = "irongate-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
time        = { workspace = true }
url         = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
