[package]
name = "irongate-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
irongate-core  = { path = "../core" }
argon2         = { workspace = true }
base64ct       = { workspace = true }
jsonwebtoken   = { workspace = true }
p256           = { workspace = true }
rand           = { workspace = true }
rand_core      = { workspace = true }
rsa            = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sha2           = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
totp-rs        = { workspace = true }
uuid           = { workspace = true }
