[package]
name = "irongate-federation"
version = "0.1.0"
edition = "2021"

[dependencies]
irongate-core   = { path = "../core" }
irongate-crypto = { path = "../crypto" }
irongate-store  = { path = "../store" }
async-trait     = { workspace = true }
ldap3           = { workspace = true }
reqwest         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
url             = { workspace = true }
uuid            = { workspace = true }
