[package]
name = "irongate-federation"
version = "0.1.0"
edition = "2021"

[dependencies]
irongate-core  = { path = "../core" }
async-trait    = { workspace = true }
jsonwebtoken   = { workspace = true }
ldap3          = { workspace = true }
reqwest        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
url            = { workspace = true }
uuid           = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio   = { workspace = true }
