[package]
name = "irongate-scim"
version = "0.1.0"
edition = "2021"

[dependencies]
irongate-core  = { path = "../core" }
irongate-store = { path = "../store" }
async-trait    = { workspace = true }
axum           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
uuid           = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
mockall     = { workspace = true }
tokio       = { workspace = true }
tower       = { workspace = true }
