[package]
name = "irongate-webauthn"
version = "0.1.0"
edition = "2021"

[dependencies]
irongate-core  = { path = "../core" }
irongate-store = { path = "../store" }
async-trait    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
uuid           = { workspace = true }
webauthn-rs    = { workspace = true }
