[package]
name = "irongate-webauthn"
version = "0.1.0"
edition = "2021"

[dependencies]
irongate-core  = { path = "../core" }
async-trait    = { workspace = true }
base64ct       = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
url            = { workspace = true }
uuid           = { workspace = true }
webauthn-rs    = { workspace = true, features = ["danger-allow-state-serialisation"] }

[dev-dependencies]
mockall = { workspace = true }
tokio   = { workspace = true }
